--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,47 @@
   --Blue-950: hsl(218, 23%, 16%);
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Manrope", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background-color: var(--Blue-950);
+}
+
+.main_app {
+  border: 2px solid red;
+  background-color: var(--Blue-900);
+  text-align: center;
+  padding: 2rem 1.2rem;
+  max-width: 500px;
+  width: 100%;
+}
+
+.main_title {
+  color: var(--Green-300);
+  font-size: 0.8rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.main_subtitle {
+  font-size: 28px;
+  color: var(--Blue-200);
+  padding: 0rem 1rem;
+  margin-top: 2rem;
+  font-weight: bold;
+  line-height: 1.5;
+}
+
+.divider {
+  border: 2px solid red;
 }
