--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
   background-color: var(--Blue-900);
   text-align: center;
   padding: 2rem 0rem;
-  max-width: 500px;
+  max-width: 450px;
   width: 100%;
   border-radius: 10px;
   position: relative;
@@ -77,4 +77,14 @@ body {
 .switch_button:hover {
   box-shadow: 0 0 20px var(--Green-300), 0 0 30px var(--Green-300);
   transition: all 0.2s ease;
+}
+
+@media screen and (min-width: 900px) {
+  .main_app {
+    max-width: 550px;
+  }
+
+  .switch_button {
+    top: calc(100% - 0.5rem);
+  }
 }
