Change size of dice icon

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
   width: 100%;
   border-radius: 10px;
   position: relative;
+  box-shadow: 0px 5px 15px hsla(218, 24%, 13%, 0.816);
 }
 
 .main_title {
@@ -59,7 +60,7 @@ body {
 }
 
 .dice_button_icon {
-  width: 35px;
+  width: 30px;
 }
 
 .switch_button {
@@ -89,6 +90,6 @@ body {
   }
 
   .dice_button_icon {
-    width: 35px;
+    width: 30px;
   }
 }
